--- a/index.html
+++ b/index.html
@@ -9,12 +9,61 @@
 
 
 <body>
-	<a target="_blank" href="">
-		<div>lorem</div>
-	</a>
-	<span>Далеко-далеко, за словесными.</span>
-	<a href="">Lorem ipsum dolor sit amet.</a>
 
+	<heder class="heder">
+		<nav class="menu">
+			<ul class="list">
+				<li>
+					<a href="#" class="link">Lorem1</a>
+				</li>
+				<li>
+					<a href="#" class="link">Lorem2</a>
+				</li>
+				<li>
+					<a href="#" class="link">Lorem3</a>
+				</li>
+				<li>
+					<a href="#" class="link">Lorem4</a>
+				</li>
+				<li>
+					<a href="#" class="link">Lorem5</a>
+				</li>
+			</ul>
+		</nav>
+		<br>
+		<br>
+		<br>
+		<br>
+		<a target="_blank" href="">
+			<div>lorem</div>
+		</a>
+		<span>Далеко-далеко, за словесными.</span>
+		<a href="">Lorem ipsum dolor sit amet.</a>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<p class="text">
+			Lorem ipsum dolor <a href=""><span style="color: red;" class="color">sit</span></a> amet consectetur
+			adipisicing elit. A,
+			iusto?
+		</p>
+		<nav class="menu__two">
+			<ul class="list">
+				<li><a href="" class="link">Lorem, ipsum.</a></li>
+				<li><a href="" class="link">Lorem, ipsum.</a></li>
+				<li><a href="" class="link">Lorem, ipsum.</a></li>
+			</ul>
+		</nav>
+	</heder>
+	<main class="main">
+		<div class="img"><a href="#" class="img__foto"><img style="width: 100px;" src="img/image.jpg" alt="ноги"></a>
+		</div>
+	</main>
+	<footer class="footer">
+
+	</footer>
 
 </body>
 
