--- a/index.html
+++ b/index.html
@@ -4,69 +4,69 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="css/style.css">
 	<title>Урок №2</title>
 </head>
 
 
 <body>
+	<div class="wrapper">
+		<header class="header" title="в дальнейшем здесь будет меню">
+			<div class="inner">
+				<div class="header__menu">
+					<p id="top" class="header__text">я header</p>
+					<p class="header__title" title="в дальнейшем здесь будет меню"><a href="#">наведи на меня</a></p>
+				</div>
+			</div>
+		</header>
+		<main class="main">
+			<div class="inner">
+				<div class="main__block">
+					<div class="block__side">
+						<a href="#" class="img">
+							<img src="img/image.jpg" alt="ноги,тату">
+						</a>
+						<p class="unnumbered__title"><span class="side-title">Ненумерованный</span> список</p>
+						<nav class="unnumbered">
+							<ul class="link">
+								<li><a class="list" href="#">Пункт 1</a></li>
+								<li><a class="list" href="#">Пункт 2</a></li>
+								<li><a class="list" href="#">Пункт 3</a></li>
+							</ul>
+						</nav>
+						<p class="numbered__title"><span class="side-title">Нумерованный</span> список</p>
+						<nav class="numbered">
+							<ol class="link">
+								<li><a href="" class="link">Пункт1</a></li>
+								<li><a href="" class="link">Пункт2</a></li>
+								<li><a href="" class="link">Пункт3</a></li>
+							</ol>
+						</nav>
+					</div>
+					<div class="block__chief">
+						<h1>Заглавие, аш 1</h1>
+						<P>Lorem ipsum dolor sit amet consectetur adipisicing elit. <br> Culpa voluptate obcaecati
+							maxime
+							distinctio id neque sapiente nam odit ducimus voluptatem!</P>
+						<h2>аш 2</h2>
+						<h3>аш 3</h3>
+						<h4>аш 4</h4>
+						<h5>аш 5</h5>
+						<h6>аш 6</h6>
+						<div class="bottom">footer ниже</div>
+					</div>
+				</div>
+			</div>
+		</main>
+		<footer class="footer">
+			<div class="inner">
+				<div class="footer__block">
+					<p><a href="#top">Подвал</a></p>
 
-	<heder class="heder">
-		<nav class="menu">
-			<ul class="list">
-				<li>
-					<a href="#" class="link">Lorem1</a>
-				</li>
-				<li>
-					<a href="#" class="link">Lorem2</a>
-				</li>
-				<li>
-					<a href="#" class="link">Lorem3</a>
-				</li>
-				<li>
-					<a href="#" class="link">Lorem4</a>
-				</li>
-				<li>
-					<a href="#" class="link">Lorem5</a>
-				</li>
-			</ul>
-		</nav>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<a target="_blank" href="">
-			<div>lorem</div>
-		</a>
-		<span>Далеко-далеко, за словесными.</span>
-		<a href="">Lorem ipsum dolor sit amet.</a>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<p class="text">
-			Lorem ipsum dolor <a href=""><span style="color: red;" class="color">sit</span></a> amet consectetur
-			adipisicing elit. A,
-			iusto?
-		</p>
-		<nav class="menu__two">
-			<ul class="list">
-				<li><a href="" class="link">Lorem, ipsum.</a></li>
-				<li><a href="" class="link">Lorem, ipsum.</a></li>
-				<li><a href="" class="link">Lorem, ipsum.</a></li>
-			</ul>
-		</nav>
-	</heder>
-	<main class="main">
-		<div class="img"><a href="#" class="img__foto"><img style="width: 100px;" src="img/image.jpg" alt="ноги"></a>
-		</div>
-	</main>
-	<footer class="footer">
-
-	</footer>
-
+				</div>
+			</div>
+		</footer>
+	</div>
 </body>
 
 </html>
